feat: add deployment script and environment configuration for Obsidian plugin feat: enhance RawLogModal with character counter and improved styling chore: update .gitignore to include dist directory

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node esbuild.config.mjs --watch",
     "build": "node esbuild.config.mjs production",
+    "deploy": "npm run build && node deploy.mjs",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
